--- a/public/css/src/hosting.css
+++ b/public/css/src/hosting.css
@@ -92,10 +92,6 @@
     padding: 15px;
 }
 
-/*.hosting-populaire > div > article > a > div:last-child > p {
-    margin-top: -50px;
-}*/
-
 .hosting-populaire > div > article > a > div > img {
     width: 140px;
     height: 100%;
